assets/test-package/tests/passing/ephemeral/ref.typ
#import "/src/lib.typ": helper

#helper("Hello World")
