assets/test-package/tests/failing/ephemeral-compare-failure/test.typ
#import "/src/lib.typ": helper

#helper("Ephemeral Compare Failure")
